--- a/index.html
+++ b/index.html
@@ -1,60 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Learn to code solo edition</title>
-    <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
-  </head>
-  <body>
+    <title>MOM GET THE CAMERA!</title>
+    <link rel="stylesheet" href="assets/css/style.css" media="screen" title="no title" charset="utf-8">
+</head>
 
-      <!-- Header Section -->
-      <header>
-          <!--  Header -->
-          <!-- Page links-->
-          <div id="Header">
+<body>
 
-            <h1>Nathaiel Van Doren</h1>
-
-            <ul>
-              <li class="About"> <a href="#">About</a></li>
-              <li class="Portfolio"><a href="#">Porfolio</a></li>
-              <li class="Contact"><a href="#">Contact</a>
-            </ul>
-
-          </div>
-        </header>
-        <!-- Main-->
-        <!-- about me-->
-        <div id="Main">
-
-            <div id="about-me">
-
-              <h2>About Me</h2>
-
-              <img src="placeholder.jpg" alt="SExy picture of me oooo" />
-
-              <p>
-                Lovely dicription of myself. mmhmmmmmm
-              </p>
+    <!--  Header -->
+    <!-- Page Nav-->
+    <div class="header">
+        <div class="container">
+            <div class="name">
+                <h1>Nathaniel Van Doren</h1>
             </div>
+            <div class="nav">
+                <ul>
+                    <li class="Index"> <a href="index.html">About</a></li>
+                    <li class="Portfolio"><a href="portfolio.html">Porfolio</a></li>
+                    <li class="Contact"><a href="contact.html">Contact</a>
+                </ul>
+            </div>
+        </div>
+    </div>
 
-            <div id="connect-me">
-              <h3>Connect with Me</h3>
-              <ul>
+
+
+    <!-- Main Body-->
+    <!-- About Me-->
+    <div class="Main" style="margin: 10px; width:960px">
+
+        <div class="aboutme">
+
+            <h2>About Me</h2>
+
+            <img src="assets/images/frustration_cartoon.png" alt="I drive myself crazy" />
+
+            <p>
+                Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
+                'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still
+                in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+            </p>
+        </div>
+
+        <div class="connectme" style="margin-right: 10px; width:270px">
+            <h3>Connect with Me</h3>
+            <ul>
                 <img src="Email" alt="" />
                 <img src="linkdin" alt="" />
                 <img src="reddit?" alt="" />
-              </ul>
-
+            </ul>
+        </div>
+    </div>
+    <!--Footer Fixed-->
+    <!--Copyright-->
+    <div class="footer">
+        <div class="container">
+            <div class="copyright">
+                <h4>© Copyright 2016 Nathaniel Van Doren</h4>
             </div>
+        </div>
+    </div>
 
-          <!--Footer-->
-          <!--copyright-->
-          <div id="footer">
+</body>
 
-            <h4>® Copyright 2016 Nathaniel Van Doren</h4>
-
-          </div>
-
-  </body>
 </html>
