It does not matter how slowly you go as long as you do not stop

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Learn to code solo edition</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css" media="screen" title="no title" charset="utf-8">
 </head>
 
 <body>
 
     <!--  Header -->
-    <!-- Page links-->
+    <!-- Page Nav-->
     <div class="header">
 
         <div class="container">
@@ -21,23 +21,63 @@
 
             <div class="nav">
                 <ul>
-                    <li class="Index"> <a href="index.html">About</a></li>
-                    <li class="Portfolio"><a href="portfolio.html">Porfolio</a></li>
+                    <li class="Index"> <a href="index.html">About</a>|</li>
+                    <li class="Portfolio"><a href="portfolio.html">Portfolio</a>|</li>
                     <li class="Contact"><a href="contact.html">Contact</a>
                 </ul>
             </div>
         </div>
     </div>
-    <!--Footer Fixed-->
-    <!--Copyright-->
-    <div class="footer">
-        <div class="container">
-            <div class="copyright">
-                <h4>© Copyright 2016 Nathaniel Van Doren</h4>
+
+
+
+    <!-- Main Body-->
+    <!-- About Me-->
+    <div class="Body">
+        <div class="Main">
+
+            <div class="aboutme">
+
+                <h1>Portfolio</h1>
+            </div>
+            <div class="subject">
+                <div class="portfolio">
+                    <img class="image" src="assets/images/HANGMAN.jpg" height="195px" width="260px" alt="Hangman" />
+                    <div class="hangtext">Hangman</div>
+                    <img class="image" src="assets/images/RPGGAME.jpg" height="195px" width="260px" alt="RPG Game" />
+                    <div class="rpgtext">RPG Game</div>
+                    <img class="image" src="assets/images/TRIVIAGAME.jpg" height="195px" width="260px" alt="Trivia Game" />
+                    <div class="triviatext">Trivia Game</div>
+                    <img class="image" src="assets/images/RUTGERSINFOWIDGET.jpg" height="195px" width="260px" alt="Rutgers Info Widget" />
+                    <div class="rutgerstext">Rutgers Info Widget</div>
+                    <img class="image" src="assets/images/ROCKPAPERSCISSORS.jpg" height="195px" width="260px" alt="Rock Paper Scissors" />
+                    <div class="RPStext">Rock Paper Scissors</div>
+                </div>
             </div>
         </div>
-    </div>
+        <div class="side">
+            <div class="connectme">
+                <h3>Connect with Me</h3>
+            </div>
+            <div class="icons">
+                <ul>
+                    <img src="assets/images/github.png" height="60px" width="60px" alt="git" />
+                    <img src="assets/images/linkedin.png" height="60px" width="60px" alt="linked" />
+                    <img src="assets/images/stackoverflow.png" height="60px" width="60px" alt="stacked" />
+                </ul>
+            </div>
+        </div>
+      </div>
+        <!--Footer Fixed-->
+        <!--Copyright-->
+        <div class="containerfoot">
+            <div class="footer">
+                <div class="copyright">
+                    <h4>© Copyright 2016 Nathaniel Van Doren</h4>
+                </div>
+            </div>
+        </div>
 
-  </body>
+</body>
 
-  </html>
+</html>
