--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Learn to code solo edition</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="assets/css/style.css" media="screen" title="no title" charset="utf-8">
 </head>
 
 <body>
 
     <!--  Header -->
-    <!-- Page links-->
+    <!-- Page Nav-->
     <div class="header">
 
         <div class="container">
@@ -21,24 +21,70 @@
 
             <div class="nav">
                 <ul>
-                    <li class="Index"> <a href="index.html">About</a></li>
-                    <li class="Portfolio"><a href="portfolio.html">Porfolio</a></li>
+                    <li class="Index"> <a href="index.html">About</a>|</li>
+                    <li class="Portfolio"><a href="portfolio.html">Portfolio</a>|</li>
                     <li class="Contact"><a href="contact.html">Contact</a>
                 </ul>
             </div>
         </div>
     </div>
 
+
+
+    <!-- Main Body-->
+    <!-- About Me-->
+    <div class="Body">
+        <div class="Main">
+
+            <div class="aboutme">
+
+                <h1>Contact Me</h1>
+            </div>
+            <div class="subject">
+                <form action="MAILTO:SpiderByt3s@gmail.com" method="post" enctype="text/plain">
+                    Name
+                    <br>
+                    <br>
+                    <input class="entername" type="text" name="name" value="John Smith" <br>
+                    <br>
+                    <br> Email
+                    <br>
+                    <br>
+                    <input class="enteremail" type="text" name="email" value="example@gmail.com" <br>
+                    <br>
+                    <br> Message
+                    <br>
+                    <br>
+                    <input class="entermessage" type="text" name="message" value="" <br>
+                    <br>
+                    <input class="submit" type="submit" value="Submit">
+                </form>
+
+            </div>
+        </div>
+        <div class="side">
+            <div class="connectme">
+                <h3>Connect with Me</h3>
+            </div>
+            <div class="icons">
+                <ul>
+                    <img src="assets/images/github.png" height="60px" width="60px" alt="git" />
+                    <img src="assets/images/linkedin.png" height="60px" width="60px" alt="linked" />
+                    <img src="assets/images/stackoverflow.png" height="60px" width="60px" alt="stacked" />
+                </ul>
+            </div>
+        </div>
+    </div>
     <!--Footer Fixed-->
     <!--Copyright-->
-    <div class="footer">
-        <div class="container">
+    <div class="containerfoot">
+        <div class="footer">
             <div class="copyright">
                 <h4>© Copyright 2016 Nathaniel Van Doren</h4>
             </div>
         </div>
     </div>
 
-  </body>
+</body>
 
-  </html>
+</html>
