--- a/index.html
+++ b/index.html
@@ -3,67 +3,75 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MOM GET THE CAMERA!</title>
+    <title>About</title>
     <link rel="stylesheet" href="assets/css/style.css" media="screen" title="no title" charset="utf-8">
 </head>
 
 <body>
+    <div id="wrapper">
+        <!--  Header -->
+        <!-- Page Nav-->
+        <div class="header">
 
-    <!--  Header -->
-    <!-- Page Nav-->
-    <div class="header">
-        <div class="container">
-            <div class="name">
-                <h1>Nathaniel Van Doren</h1>
+            <div class="container">
+
+                <div class="name">
+                    <h1>Nathaniel Van Doren</h1>
+                </div>
+
+                <div class="nav">
+                    <ul>
+                        <li class="Index"> <a href="index.html">About</a>|</li>
+                        <li class="Portfolio"><a href="portfolio.html">Portfolio</a>|</li>
+                        <li class="Contact"><a href="contact.html">Contact</a>
+                    </ul>
+                </div>
             </div>
-            <div class="nav">
-                <ul>
-                    <li class="Index"> <a href="index.html">About</a></li>
-                    <li class="Portfolio"><a href="portfolio.html">Porfolio</a></li>
-                    <li class="Contact"><a href="contact.html">Contact</a>
-                </ul>
+        </div>
+
+
+
+        <!-- Main Body-->
+        <!-- About Me-->
+        <div class="Body">
+            <div class="Main">
+
+                <div class="aboutme">
+
+                    <h1>About Me</h1>
+                </div>
+                <div class="subject">
+                    <img class="me" src="assets/images/onlyphotoofme.jpg" height="40%" width="40%" alt="Best I got" />
+
+                    <p> Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
+                        as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
+                        uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                    </p>
+                </div>
+            </div>
+            <div class="side">
+                <div class="connectme">
+                    <h3>Connect with Me</h3>
+                </div>
+                <div class="icons">
+                    <ul>
+                        <img src="assets/images/github.png" height="60px" width="60px" alt="git" />
+                        <img src="assets/images/linkedin.png" height="60px" width="60px" alt="linked" />
+                        <img src="assets/images/stackoverflow.png" height="60px" width="60px" alt="stacked" />
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!--Footer Fixed-->
+        <!--Copyright-->
+        <div class="containerfoot">
+            <div class="footer">
+                <div class="copyright">
+                    <h4>© Copyright 2016 Nathaniel Van Doren</h4>
+                </div>
             </div>
         </div>
     </div>
-
-
-
-    <!-- Main Body-->
-    <!-- About Me-->
-    <div class="Main" style="margin: 10px; width:960px">
-
-        <div class="aboutme">
-
-            <h2>About Me</h2>
-
-            <img src="assets/images/frustration_cartoon.png" alt="I drive myself crazy" />
-
-            <p>
-                Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-                'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still
-                in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-            </p>
-        </div>
-
-        <div class="connectme" style="margin-right: 10px; width:270px">
-            <h3>Connect with Me</h3>
-            <ul>
-                <img src="Email" alt="" />
-                <img src="linkdin" alt="" />
-                <img src="reddit?" alt="" />
-            </ul>
-        </div>
-    </div>
-    <!--Footer Fixed-->
-    <!--Copyright-->
-    <div class="footer">
-        <div class="container">
-            <div class="copyright">
-                <h4>© Copyright 2016 Nathaniel Van Doren</h4>
-            </div>
-        </div>
-    </div>
-
 </body>
 
 </html>
